--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'http://hugojihunlee.com/'
 languageCode = 'en-us'
 title = 'Hugo Jihun Lee'
 theme = 'hyde'
